--- a/data/stories.yml
+++ b/data/stories.yml
@@ -4,6 +4,8 @@ stories:
 
 - story: happy path
   steps:
+  - intent: get_started
+  - action: utter_greet
   - intent: greet
   - action: utter_greet
   - intent: mood_great
@@ -11,6 +13,7 @@ stories:
 
 - story: sad path 1
   steps:
+  - intent: get_started
   - intent: greet
   - action: utter_greet
   - intent: mood_unhappy
@@ -21,6 +24,7 @@ stories:
 
 - story: sad path 2
   steps:
+  - intent: get_started
   - intent: greet
   - action: utter_greet
   - intent: mood_unhappy
@@ -31,6 +35,7 @@ stories:
 
 - story: sad path 3
   steps:
+  - intent: get_started
   - intent: greet
   - action: utter_greet
   - intent: SOS
@@ -41,6 +46,7 @@ stories:
 
 - story: sad path 4
   steps:
+  - intent: get_started
   - intent: greet
   - action: utter_greet
   - intent: SOS
@@ -51,6 +57,7 @@ stories:
 
 - story: sad path 5
   steps:
+  - intent: get_started
   - intent: SOS
   - action: utter_emergency
   - action: utter_did_that_help
@@ -59,6 +66,7 @@ stories:
 
 - story: sad path 6
   steps:
+  - intent: get_started
   - intent: greet
   - action: utter_greet
   - intent: SOS
@@ -69,6 +77,7 @@ stories:
 
 - story: sad path 7
   steps:
+  - intent: get_started
   - intent: greet
   - action: utter_greet
   - intent: discuss_depression
@@ -79,6 +88,7 @@ stories:
 
 - story: sad path 8
   steps:
+  - intent: get_started
   - intent: greet
   - action: utter_greet
   - intent: discuss_anxiety
@@ -89,6 +99,7 @@ stories:
 
 - story: sad path 9
   steps:
+  - intent: get_started
   - intent: greet
   - action: utter_greet
   - intent: discuss_OCD
@@ -99,6 +110,7 @@ stories:
 
 - story: sad path 10
   steps:
+  - intent: get_started
   - intent: greet
   - action: utter_greet
   - intent: discuss_PTSD
@@ -109,6 +121,7 @@ stories:
 
 - story: sad path 11
   steps:
+  - intent: get_started
   - intent: greet
   - action: utter_greet
   - intent: depression_symptoms
@@ -119,6 +132,7 @@ stories:
 
 - story: sad path 12
   steps:
+  - intent: get_started
   - intent: greet
   - action: utter_greet
   - intent: anxiety_symptoms
@@ -129,6 +143,7 @@ stories:
 
 - story: sad path 13
   steps:
+  - intent: get_started
   - intent: greet
   - action: utter_greet
   - intent: OCD_symptoms
@@ -139,6 +154,7 @@ stories:
 
 - story: sad path 14
   steps:
+  - intent: get_started
   - intent: greet
   - action: utter_greet
   - intent: PTSD_symptoms
@@ -149,6 +165,7 @@ stories:
 
 - story: sad path 15
   steps:
+  - intent: get_started
   - intent: greet
   - action: utter_greet
   - intent: ADHD_symptoms
@@ -159,46 +176,51 @@ stories:
 
 - story: sad path 16
   steps:
-    - intent: greet
-    - action: utter_greet
-    - intent: depression_remedy
-    - action: utter_depression_remedy
-    - action: utter_did_that_help
-    - intent: affirm
-    - action: utter_happy
+  - intent: get_started
+  - intent: greet
+  - action: utter_greet
+  - intent: depression_remedy
+  - action: utter_depression_remedy
+  - action: utter_did_that_help
+  - intent: affirm
+  - action: utter_happy
 
 - story: sad path 17
   steps:
-    - intent: greet
-    - action: utter_greet
-    - intent: anxiety_remedy
-    - action: utter_anxiety_remedy
-    - action: utter_did_that_help
-    - intent: affirm
-    - action: utter_happy
+  - intent: get_started
+  - intent: greet
+  - action: utter_greet
+  - intent: anxiety_remedy
+  - action: utter_anxiety_remedy
+  - action: utter_did_that_help
+  - intent: affirm
+  - action: utter_happy
 
 - story: sad path 18
   steps:
-    - intent: greet
-    - action: utter_greet
-    - intent: OCD_remedy
-    - action: utter_OCD_remedy
-    - action: utter_did_that_help
-    - intent: affirm
-    - action: utter_happy
+  - intent: get_started
+  - intent: greet
+  - action: utter_greet
+  - intent: OCD_remedy
+  - action: utter_OCD_remedy
+  - action: utter_did_that_help
+  - intent: affirm
+  - action: utter_happy
 
 - story: sad path 19
   steps:
-    - intent: greet
-    - action: utter_greet
-    - intent: PTSD_remedy
-    - action: utter_PTSD_remedy
-    - action: utter_did_that_help
-    - intent: affirm
-    - action: utter_happy
+  - intent: get_started
+  - intent: greet
+  - action: utter_greet
+  - intent: PTSD_remedy
+  - action: utter_PTSD_remedy
+  - action: utter_did_that_help
+  - intent: affirm
+  - action: utter_happy
 
 - story: sad path 20
   steps:
+  - intent: get_started
   - intent: greet
   - action: utter_greet
   - intent: discuss_depression
@@ -209,6 +231,7 @@ stories:
 
 - story: sad path 21
   steps:
+  - intent: get_started
   - intent: greet
   - action: utter_greet
   - intent: discuss_anxiety
@@ -219,6 +242,7 @@ stories:
 
 - story: sad path 22
   steps:
+  - intent: get_started
   - intent: greet
   - action: utter_greet
   - intent: discuss_OCD
@@ -229,6 +253,7 @@ stories:
 
 - story: sad path 23
   steps:
+  - intent: get_started
   - intent: greet
   - action: utter_greet
   - intent: discuss_PTSD
@@ -239,6 +264,7 @@ stories:
 
 - story: sad path 24
   steps:
+  - intent: get_started
   - intent: greet
   - action: utter_greet
   - intent: discuss_ADHD
@@ -249,6 +275,7 @@ stories:
 
 - story: sad path 25
   steps:
+  - intent: get_started
   - intent: greet
   - action: utter_greet
   - intent: depression_symptoms
@@ -259,6 +286,7 @@ stories:
 
 - story: sad path 26
   steps:
+  - intent: get_started
   - intent: greet
   - action: utter_greet
   - intent: anxiety_symptoms
@@ -269,6 +297,7 @@ stories:
 
 - story: sad path 27
   steps:
+  - intent: get_started
   - intent: greet
   - action: utter_greet
   - intent: OCD_symptoms
@@ -279,6 +308,7 @@ stories:
 
 - story: sad path 28
   steps:
+  - intent: get_started
   - intent: greet
   - action: utter_greet
   - intent: PTSD_symptoms
@@ -289,6 +319,7 @@ stories:
 
 - story: sad path 29
   steps:
+  - intent: get_started
   - intent: greet
   - action: utter_greet
   - intent: ADHD_symptoms
@@ -299,6 +330,7 @@ stories:
 
 - story: sad path 30
   steps:
+  - intent: get_started
   - intent: greet
   - action: utter_greet
   - intent: depression_remedy
@@ -309,6 +341,7 @@ stories:
 
 - story: sad path 31
   steps:
+  - intent: get_started
   - intent: greet
   - action: utter_greet
   - intent: anxiety_remedy
@@ -319,6 +352,7 @@ stories:
 
 - story: sad path 32
   steps:
+  - intent: get_started
   - intent: greet
   - action: utter_greet
   - intent: OCD_remedy
@@ -329,6 +363,7 @@ stories:
 
 - story: sad path 33
   steps:
+  - intent: get_started
   - intent: greet
   - action: utter_greet
   - intent: PTSD_remedy
@@ -339,6 +374,7 @@ stories:
 
 - story: sad path 34
   steps:
+  - intent: get_started
   - intent: greet
   - action: utter_greet
   - intent: ADHD_remedy
@@ -349,11 +385,13 @@ stories:
 
 - story: bye path 35
   steps:
+  - intent: get_started
   - intent: goodbye
   - action: utter_goodbye
 
 - story: hru 36
   steps:
+  - intent: get_started
   - intent: greet
   - action: utter_greet
   - intent: bot_hru
@@ -361,11 +399,13 @@ stories:
 
 - story: Thanks
   steps:
+  - intent: get_started
   - intent: Thank
   - action: utter_Thank
 
 - story: Repeat
   steps:
+  - intent: get_started
   - intent: Repeat
   - action: utter_what_to_repeat
   - intent: What_to_repeat
