--- a/config.yml
+++ b/config.yml
@@ -6,6 +6,7 @@ recipe: default.v1
 # https://rasa.com/docs/rasa/nlu/components/
 language: en
 
+
 pipeline:
 # # No configuration for the NLU pipeline was provided. The following default pipeline was used to train your model.
 # # If you'd like to customize it, uncomment and adjust the pipeline.
@@ -28,22 +29,11 @@ pipeline:
 #   - name: FallbackClassifier
 #     threshold: 0.3
 #     ambiguity_threshold: 0.1
+ #  - name: FallbackClassifier
+  #   threshold: 0.5
+   #  ambiguity_threshold: 0.1
 
-# Configuration for Rasa Core.
-# https://rasa.com/docs/rasa/core/policies/
-#policies:
-# # No configuration for policies was provided. The following default policies were used to train your model.
-# # If you'd like to customize them, uncomment and adjust the policies.
-# # See https://rasa.com/docs/rasa/policies for more information.
-#   - name: MemoizationPolicy
-#    - name: RulePolicy
-#   - name: UnexpecTEDIntentPolicy
-#     max_history: 5
-#     epochs: 100
-#   - name: TEDPolicy
-#     max_history: 5
-#     epochs: 100
-#     constrain_similarities: true
+
 policies:
 # # No configuration for policies was provided. The following default policies were used to train your model.
 # # If you'd like to customize them, uncomment and adjust the policies.
@@ -57,3 +47,32 @@ policies:
 #     max_history: 5
 #     epochs: 100
 #     constrain_similarities: true
+
+# Configuration for Rasa Core.
+# https://rasa.com/docs/rasa/core/policies/
+# # No configuration for policies was provided. The following default policies were used to train your model.
+# # If you'd like to customize them, uncomment and adjust the policies.
+# # See https://rasa.com/docs/rasa/policies for more information.
+
+#- name: FallbackPolicy
+#  nlu_threshold: 0.4
+#  core_threshold: 0.4
+#  fallback_action_name: "action_default_fallback"
+
+
+
+
+
+#   - name: MemoizationPolicy
+#   - name: RulePolicy
+#   - name: TEDPolicy
+#     max_history: 5
+#     epochs: 100
+#     constrain_similarities: true
+
+
+# - name: "FallbackPolicy"
+#    nlu_threshold: 0.3
+#    core_threshold: 0.3
+#    fallback_action_name: 'action_default_fallback'
+
